--- a/Letter_to_Herodotus_Bailey_Bilingual.html
+++ b/Letter_to_Herodotus_Bailey_Bilingual.html
@@ -392,6 +392,142 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
         For it is not impossible that such emanations should be formed in that which surrounds the objects, nor that there should be opportunities for the formation of such hollow and thin frames, nor that there should be effluences which preserve the respective position and order which they had before in the solid bodies:
     </td>
 </tr>
+<tr>
+    <td>
+        τούτους δὲ τοὺς τύπους εἴδωλα προσαγορεύομεν.
+    </td>
+    <td>
+        these images we call idols.
+    </td>
+</tr>
+<tr>
+    <td>
+        [47] Εἶθ᾽ ὅτι τὰ εἴδωλα ταῖς λεπτότησιν ἀνυπερβλήτοις κέχρηται, οὐθὲν ἀντιμαρτυρεῖ τῶν φαινομένων·
+    </td>
+    <td>
+        [47] Next, nothing among perceptible things contradicts the belief that the images have unsurpassable fineness of texture.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὅθεν καὶ τάχη ἀνυπέρβλητα ἔχει, πάντα πόρον σύμμετρον ἔχοντα πρὸς &lt;τῷ&gt; τῷ ἀπορρῷ αὐτῶν μηθὲν ἀντικόπτειν ἢ ὀλίγα ἀντικόπτειν, πολλαῖς δὲ καὶ ἀπείροις εὐθὺς ἀντικόπτειν τι.
+    </td>
+    <td>
+        And for this reason they have also unsurpassable speed of motion, since the movement of all their atoms is uniform, and besides nothing or very few things hinder their emission by collisions, whereas a body composed of many or infinite atoms is at once hindered by collisions.
+    </td>
+</tr>
+<tr>
+    <td>
+        [48] πρός τε τούτοις, ὅτι ἡ γένεσις τῶν εἰδώλων ἅμα νοήματι συμβαίνει.
+    </td>
+    <td>
+        [48] Besides this &lt;nothing contradicts the belief&gt; that the creation of the idols takes place as quick as thought.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ γὰρ ῥεῦσις ἀπὸ τῶν σωμάτων τοῦ ἐπιπολῆς συνεχής, οὐκ ἐπίδηλος τῇ μειώσει διὰ τὴν ἀνταναπλήρωσιν,
+    </td>
+    <td>
+        For the flow of atoms from the surface of bodies is continuous, yet it cannot be detected by any lessening in the size of the object because of the constant filling up of what is lost.
+    </td>
+</tr>
+<tr>
+    <td>
+        σῴζουσα τὴν ἐπὶ τοῦ στερεμνίου θέσιν καὶ τάξιν τῶν ἀτόμων ἐπὶ πολὺν χρόνον, εἰ καὶ ἐνίοτε συγχεομένη ὑπάρχει,
+    </td>
+    <td>
+        The flow of images preserves for a long time the position and order of the atoms in the solid body, though it is occasionally confused.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ συστάσεις ἐν τῷ περιέχοντι ὀξεῖαι διὰ τὸ μὴ δεῖν κατὰ βάθος τὸ συμπλήρωμα γίνεσθαι, καὶ ἄλλοι δὲ τρόποι τινὲς γεννητικοὶ τῶν τοιούτων φύσεών εἰσιν.
+    </td>
+    <td>
+        Moreover compound idols are quickly formed in the air around, because it is not necessary for their substance to be filled in deep inside: and besides there are certain other methods in which existences of this sort are produced.
+    </td>
+</tr>
+<tr>
+    <td>
+        οὐθὲν γὰρ τούτων ἀντιμαρτυρεῖται ταῖς αἰσθήσεσιν, ἂν βλέπῃ τις τίνα τρόπον τὰς ἐναργείας, τίνα καὶ τὰς συμπαθείας ἀπὸ τῶν ἔξωθεν πρὸς ἡμᾶς ἀνοίσει.
+    </td>
+    <td>
+        For not one of these beliefs is contradicted by our sensations, if one looks to see in what way sensation will bring us the clear visions from external objects, and in what way again the corresponding sequence of qualities and movements.
+    </td>
+</tr>
+<tr>
+    <td>
+        [49] Δεῖ δὲ καὶ νομίζειν, ἐπεισιόντος τινὸς ἀπὸ τῶν ἔξωθεν τὰς μορφὰς ὁρᾶν ἡμᾶς καὶ διανοεῖσθαι·
+    </td>
+    <td>
+        [49] Now we must suppose too that it is when something enters us from external objects that we not only see but think of their shapes.
+    </td>
+</tr>
+<tr>
+    <td>
+        οὐ γὰρ ἂν ἐναποσφραγίσαιτο τὰ ἔξω τὴν ἑαυτῶν φύσιν τοῦ τε χρώματος καὶ τῆς μορφῆς διὰ τοῦ ἀέρος τοῦ μεταξὺ ἡμῶν τε κἀκείνων, οὐδὲ διὰ τὼν ἀκτίνων ἢ οἵων δή ποτε ῥευμάτων ἀφ᾽ ἡμῶν πρὸς ἐκεῖνα παραγινομένων, οὕτως ὡς τύπων τινῶν ἐπεισιόντων ἡμῖν ἀπὸ τῶν πραγμάτων όμοχρόων τε καὶ ὁμοιομόρφων κατὰ τὸ ἐναρμόττον μέγεθος εἰς τὴν ὄψιν ἢ τὴν διάνοιαν, ὠκέως ταῖς φοραῖς χρωμένων,
+    </td>
+    <td>
+        For external objects could not make on us an impression of the nature of their own colour and shape by means of the air which lies between us and them, nor again by means of the rays or effluences of any sort which pass from us to them — nearly so well as if models, similar in colour and shape, leave the objects and enter according to their respective size either into our sight or into our mind, moving along swiftly,
+    </td>
+</tr>
+<tr>
+    <td>
+        [50] εἶτα διὰ ταύτην τὴν αἰτίαν τοῦ ἑνὸς καὶ συνεχοῦς τὴν φαντασίαν ἀποδιδόντων καὶ τὴν συμπάθειαν ἀπὸ τοῦ ὑποκειμένου σῳζόντων κατὰ τὸν ἐκεῖθεν σύμμετρον ἐπερεισμὸν ἐκ τῆς κατὰ βάθος ἐν τῷ στερεμνίῳ τῶν ἀτόμων πάλσεως.
+    </td>
+    <td>
+        [50] and so by this means reproducing the image of a single continuous thing and preserving the corresponding sequence of qualities and movements from the original object as the result of their uniform contact with us, kept up by the vibration of the atoms deep in the interior of the concrete body.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ ἣν ἂν λάβωμεν φαντασίαν ἐπιβλητικῶς τῇ διανοίᾳ ἢ τοῖς αἰσθητηρίοις εἴτε μορφῆς εἴτε συμβεβηκότων, μορφή ἐστιν αὕτη τοῦ στερεμνίου, γινομένη κατὰ τὸ ἑξῆς πύκνωμα ἢ ἐγκατάλειμμα τοῦ εἰδώλου. 
+    </td>
+    <td>
+        And every image which we obtain by an act of apprehension on the part of the mind or of the sense-organs, whether of shape or of properties, this image is the shape &lt;or the properties&gt; of the concrete object, and is produced by the constant repetition of the image or the impression it has left. 
+    </td>
+</tr>
+<tr>
+    <td>
+        τὸ δὲ ψεῦδος καὶ τὸ διημαρτημένον ἐν τῷ προσδοξαζομένῳ ἀεί ἐστιν &lt;ἐπὶ τοῦ προσμένοντος&gt; ἐπιμαρτυρηθήσεσθαι ἢ μὴ ἀντιμαρτυρηθήσεσθαι, εἶτ᾽ οὐκ ἐπιμαρτυρουμένου &lt;ἢ ἀντιμαρτυρουμένου&gt;·
+    </td>
+    <td>
+        Now falsehood and error always be in the addition of opinion with regard to &lt;what is waiting&gt; to be confirmed or not contradicted, and then is not confirmed &lt;or is contradicted&gt;.
+    </td>
+</tr>
+<tr>
+    <td>
+        [51] ἥ τε γὰρ ὁμοιότης τῶν φαντασμῶν οἷον εἰ ἐν εἰκόνι λαμβανομένων ἢ καθ᾽ ὕπνους γινομένων ἢ κατ᾽ ἄλλας τινὰς ἐπιβολὰς τῆς διανοίας ἢ τῶν λοιπῶν κριτηρίων οὐκ ἄν ποτε ὑπῆρχε τοῖς οὖσί τε καὶ ἀληθέσι προσαγορευομένοις, εἰ μὴ ἦν τινα καὶ τοιαῦτα προσβαλλόμενα·
+    </td>
+    <td>
+        [51] For the similarity between the things which exist, which we call real, and the images received as a likeness of things and produced either in sleep or through some other acts of apprehension on the part of the mind or the other instruments of judgement, could never be, unless there were some effluences of this nature actually brought into contact with our senses.
+    </td>
+</tr>
+<tr>
+    <td>
+        τό τε διημαρτημένον οὐκ ἄν ὑπῆρχεν, εἰ μὴ ἐλαμβάνομεν καὶ ἄλλην τινὰ κίνησιν ἐν ἡμῖν αὐτοῖς συνημμένην μὲν &lt;τῇ φανταστικῇ ἐπιβολῇ&gt;, διάληψιν δὲ ἔχουσαν·
+    </td>
+    <td>
+        And error would not exist unless another kind of movement too were produced inside ourselves, closely linked to the apprehension of images, but differing from it, 
+    </td>
+</tr>
+<tr>
+    <td>
+        κατὰ δὲ ταύτην, ἐὰν μὲν μὴ ἐπιμαρτυρηθῇ ἢ ἀντιμαρτυρηθῇ, τὸ ψεῦδος γίνεται·
+    </td>
+    <td>
+        and it is owing to this, supposing it is not confirmed, or is contradicted, that falsehood arises,
+    </td>
+</tr>
+<tr>
+    <td>
+        ἐὰν δὲ ἐπιμαρτυρηθῇ ἢ μὴ ἀντιμαρτυρηθῇ, τὸ ἀληθές.
+    </td>
+    <td>
+        but if it is confirmed or not contradicted, it is true.
+    </td>
+</tr>
 </table>
 </body>
 </html>
