--- a/Letter_to_Herodotus_Bailey_Bilingual.html
+++ b/Letter_to_Herodotus_Bailey_Bilingual.html
@@ -528,6 +528,54 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
         but if it is confirmed or not contradicted, it is true.
     </td>
 </tr>
+<tr>
+    <td>
+        [52] καὶ ταύτην οὖν σφόδρα γε δεῖ τὴν δόξαν κατέχειν, ἵνα μήτε τὰ κριτήρια ἀναιρῆται τὰ κατὰ τὰς ἐναργείας μήτε τὸ διημαρτημένον ὁμοίως βεβαιούμενον πάντα συνταράττῃ.
+    </td>
+    <td>
+        [52] Therefore we must do our best to keep this doctrine in mind, in order that on the one hand the standards of judgement dependent on the clear visions may not be undermined, and on the other error may not be as firmly established as truth and so throw all into confusion.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ἀλλὰ μὴν καὶ τὸ ἀκούειν γίνεται ῥεύματός τινος φερομένου ἀπὸ τοῦ φωνοῦντος ἢ ἠχοῦντος ἢ ψοφοῦντος ἢ ὅπως δήποτε ἀκουστικὸν πάθος παρασκευάζοντος.
+    </td>
+    <td>
+        Moreover, hearing too results when a current is carried off from the object speaking or sounding or making a noise, or causing in any other way a sensation of hearing.
+    </td>
+</tr>
+<tr>
+    <td>
+        τὸ δὲ ῥεῦμα τοῦτο εἰς ὁμοιομερεῖς ὄγκους διασπείρεται, ἅμα τινὰ διασῴζοντας συμπάθειαν πρὸς ἀλλήλους καὶ ἑνότητα ἰδιότροπον διατείνουσαν πρὸς τὸ ἀποστεῖλαν, καὶ τὴν ἐπαίσθησιν τὴν ἐπ᾽ ἐκείνου ὡς τὰ πολλὰ ποιῦσαν, εἰ δὲ μή γε, τὸ ἔξωθεν μόνον ἔνδηλον παρασκευάζονσαν·
+    </td>
+    <td>
+        Now this current is split up into particles, each like the whole, which at the same time preserve a correspondence of qualities with one another and a unity of character which stretches right back to the object which emitted the sound: this unity it is which in most cases produces comprehension in the recipient, or, if not, merely makes manifest the presence of the external object.
+    </td>
+</tr>
+<tr>
+    <td>
+        [53] ἄνευ γὰρ ἀναφερομένης τινὸς ἐκεῖθεν συμπαθείας οὐκ ἂν γένοιτο ἡ τοιαύτη ἐπαίσθησις.
+    </td>
+    <td>
+        [53] For without the transference from the object of some correspondence of qualities, comprehension of this nature could not result.
+    </td>
+</tr>
+<tr>
+    <td>
+        οὐκ αὐτὸν οὖν δεῖ νομίζειν τὸν ἀέρα ὑπὸ τῆς προἱεμένης φωνῆς ἢ καὶ τῶν ὁμογενῶν σχηματίζεσθαι (πολλὴν γὰρ ἔνδειαν ἕξει τοῦτο πάσχειν ὑπ᾽ ἐκείνης), ἀλλ᾽ εὐθὺς τὴν γινομένην πληγὴν ἐν ἡμῖν, ὅταν φωνὴν ἀφίωμεν, τοιαύτην ἔκθλιψιν ὄγκων τινῶν ῥεύματος πνευματώδους ἀποτελεστικὴν ποιεῖσθαι, ἣ τὸ πάθος τὸ ἀκουστικὸν ἡμῖν παρασκευάζει. 
+    </td>
+    <td>
+        We must not then suppose that the actual air is moulded into shape by the voice which is emitted or by other similar sounds — for it will be very far from being so acted upon by it — but that the blow which takes place inside us, when we emit our voice, causes at once a squeezing out of certain particles, which produce a stream of breath, of such a character as to afford us the sensation of hearing.
+    </td>
+</tr>
+<tr>
+    <td>
+        Καὶ μὴν καὶ τὴν ὀσμὴν νομιστέον, ὥσπερ καὶ τὴν ἀκοὴν οὐκ ἄν ποτε οὐθὲν πάθος ἐργάσασθαι, εἰ μὴ ὄγκοι τινὲς ἦσαν ἀπὸ τοῦ πράγματος ἀποφερόμενοι σύμμετροι πρὸς τὸ τοῦτο τὸ αἰσθητήριον κινεῖν, οἱ μὲν τοῖοι τεταραγμένως καὶ ἀλλοτρίως, οἱ δὲ τοῖοι ἀταράχως καὶ οἰκείως ἔχοντες. 
+    </td>
+    <td>
+        Furthermore, we must suppose that smell too, just like hearing, could never bring about any sensation, unless there were certain particles carried off from the object of suitable size to stir this sense-organ, some of them in a manner disorderly and alien to it, others in a regular manner and akin in nature.
+    </td>
+</tr>
 </table>
 </body>
 </html>
