--- a/Letter_to_Herodotus_Bailey_Bilingual.html
+++ b/Letter_to_Herodotus_Bailey_Bilingual.html
@@ -576,6 +576,150 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
         Furthermore, we must suppose that smell too, just like hearing, could never bring about any sensation, unless there were certain particles carried off from the object of suitable size to stir this sense-organ, some of them in a manner disorderly and alien to it, others in a regular manner and akin in nature.
     </td>
 </tr>
+<tr>
+    <td>
+        [54] Καὶ μὴν καὶ τὰς ἀτόμους νομιστέον μηδεμίαν ποιότητα τῶν φαινομένων προσφέρεσθαι πλὴν σχήματος καὶ βάρους καὶ μεγέθους καὶ ὅσα ἐξ ἀνάγκης σχήματι συμφυῆ ἐστι.
+    </td>
+    <td>
+        [54] Moreover, we must suppose that the atoms do not possess any of the qualities belonging to perceptible things, except shape, weight, and size, and all that necessarily goes with shape.
+    </td>
+</tr>
+<tr>
+    <td>
+        ποιότης γὰρ πᾶσα μεταβάλλει·
+    </td>
+    <td>
+        For every quality changes,
+    </td>
+</tr>
+<tr>
+    <td>
+        αἱ δὲ ἄτομοι οὐδὲν μεταβάλλουσιν, ἐπειδήπερ δεῖ τι ὑπομένειν ἐν ταῖς διαλύσεσι τῶν συγκρίσεων στερεὸν καὶ ἀδιάλυτον, ὃ τὰς μεταβολὰς οὐκ εἰς τὸ μὴ ὃν ποιήσεται οὐδ᾽ ἐκ τοῦ μὴ ὄντος, ἀλλὰ κατὰ μεταθέσεις &lt;τινῶν&gt;, τινῶν δὲ καὶ προσόδους και ἀφόδους. 
+    </td>
+    <td>
+        but the atoms do not change at all, since there must needs be something which remains solid and indissoluble at the dissolution of compounds, which can cause changes; not changes into the non-existent or from the non-existent, but changes effected by the shifting of position of some particles, and by the addition or departure of others.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὅθεν ἀναγκαῖον τὰ μὲν μετατιθέμενα ἄφθαρτα εἶναι καὶ τὴν τοῦ μεταβάλλοντος φύσιν οὐκ ἔχοντα, ὄγκους δὲ καὶ σχηματισμοὺς ἰδίους·
+    </td>
+    <td>
+        For this reason it is essential that the bodies which shift their position should be imperishable and should not possess the nature of what changes, but parts and configuration of their own.
+    </td>
+</tr>
+<tr>
+    <td>
+        τοῦτο γὰρ καὶ ἀναγκαῖον ὑπομένειν·
+    </td>
+    <td>
+        For thus much must needs remain constant.
+    </td>
+</tr>
+<tr>
+    <td>
+        [55] καὶ γὰρ ἐν τοῖς παρ᾽ ἡμῖν μετασχηματιζομένοις κατὰ τὴν περιαίρεσιν τὸ σχῆμα ἐνυπάρχον λαμβάνεται, αἱ δὲ ποιότητες οὐκ ἐνυπάρχουσαι ἐν τῷ μεταβάλλοντι, ὥσπερ ἐκεῖνο καταλείπεται, ἀλλ᾽ ἐξ ὅλου τοῦ σώματος ἀπολλύμεναι.
+    </td>
+    <td>
+        [55] For even in things perceptible to us which change their shape by the withdrawal of matter it is seen that shape remains to them, whereas the qualities do not remain in the changing object, in the way in which shape is left behind, but are lost from the entire body.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἱκανὰ οὖν τὰ ὑπολειπόμενα ταῦτα τὰς τῶν συγκρίσεων διαφορὰς ποιεῖν, ἐπειδή περ ὑπολείπεσθαί γέ τινα ἀναγκαῖον καὶ &lt;μὴ&gt; εἰς τὸ μὴ ὃν φθείρεσθαι.
+    </td>
+    <td>
+        Now these particles which are left behind are sufficient to cause the differences in compound bodies, since it is essential that some things should be left behind and not be destroyed into the non-existent.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ἀλλὰ μὴν οὐδὲ δεῖ νομίζειν πᾶν μέγεθος ἐν ταῖς ἀτόμοις ὑπάρχειν, ἵνα μὴ τὰ φαινόμενα ἀντιμαρτυρῇ·
+    </td>
+    <td>
+        Moreover, we must not either suppose that every size exists among the atoms, in order that the evidence of phenomena may not contradict us,
+    </td>
+</tr>
+<tr>
+    <td>
+        παραλλαγὰς δέ τινας μεγεθῶν νομιστέον εἶναι.
+    </td>
+    <td>
+        but we must suppose that there are some variations of size.
+    </td>
+</tr>
+<tr>
+    <td>
+        βέλτιον γὰρ καὶ τούτου προσόντος τὰ κατὰ τὰ πάθη καὶ τὰς αἰσθήσεις γινόμενα ἀποδοθήσεται. 
+    </td>
+    <td>
+        For if this be the case, we can give a better account of what occurs in our feelings and sensations.
+    </td>
+</tr>
+<tr>
+    <td>
+        [56] πᾶν δὲ μέγεθος ὑπάρχον οὔτε χρήσιμόν ἐστι πρὸς τὰς τῶν ποιοτήτων διαφοράς, ἀφῖχθαί τε ἅμ᾽ ἔδει καὶ πρὸς ἡμᾶς όρατάς ἀτόμους·
+    </td>
+    <td>
+        [56] But the existence of atoms of every size is not required to explain the differences of qualities in things, and at the same time some atoms would be bound to come within our ken and be visible, 
+    </td>
+</tr>
+<tr>
+    <td>
+        ὃ οὐ θεωρεῖται γινόμενον, οὐδ᾽ ὅπως ἂν γένοιτο ὁρατὴ ἄτομος ἔστιν ἐπινοῆσαι.
+    </td>
+    <td>
+        but this is never seen to be the case, nor is it possible to imagine how an atom could become visible.
+    </td>
+</tr>
+<tr>
+    <td>
+        Πρὸς δὲ τούτοις οὐ δεῖ νομίζειν ἐν τῷ ὡρισμένῳ σώματι ἀπείρους ὄγκους εἶναι οὐδ᾽ ὁπηλίκους οὖν.
+    </td>
+    <td>
+        Besides this we must not suppose that in a limited body there can be infinite parts or parts of every degree of smallness.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὥστε οὐ μόνον τὴν εἰς ἄπειρον τομὴν ἐπὶ τοὔλαττον ἀναιρετέον, ἵνα μὴ πάντα ἀσθενῆ ποιῶμεν κἀν ταῖς περιλήψεσι τῶν ἀθρόων εἰς τὸ μὴ ὃν ἀναγκαζώμεθα τὰ ὄντα θλίβοντες καταναλίσκειν, ἀλλὰ καὶ τὴν μετάβασιν μὴ νομιστέον γενέσθαι ἐν τοῖς ὡρισμένοις εἰς ἄπειρον μηδ᾽ &lt;ἐπὶ&gt; τοὔλαττον. 
+    </td>
+    <td>
+        Therefore, we must not only do away with division into smaller and smaller parts to infinity, in order that we may not make all things weak, and so in the composition of aggregate bodies be compelled to crush and squander the things that exist into the non-existent, but we must not either suppose that in limited bodies there is a possibility of continuing to infinity in passing even to smaller and smaller parts.
+    </td>
+</tr>
+<tr>
+    <td>
+        [57] οὔτε γὰρ ὅπως, ἐπειδὰν ἅπαξ τις εἴπῃ ὅτι ἄπειροι ὄγκοι ἔν τινι ὑπάρχουσιν ἢ ὁπηλίκοι οὖν, ἔστι νοῆσαι, πῶς τ᾽ ἂν ἔτι τοῦτο πεπερασμένον εἴη τὸ μέγεθος;
+    </td>
+    <td>
+        [57] For if once one says that there are infinite parts in a body or parts of any degree of smallness, it is not possible to conceive how this should be, and indeed how could the body any longer be limited in size?
+    </td>
+</tr>
+<tr>
+    <td>
+        (πηλίκοι γάρ τινες δῆλον ὡς οἱ ἄπειροί εἰσὶν ὄγκοι· καὶ οὗτοι ὁπηλίκοι ἄν ποτε ὦσιν, ἄπειρον ἂν ἦν καὶ τὸ μέγεθος·) 
+    </td>
+    <td>
+        (For it is obvious that these infinite particles must be of some size or other; and however small they may be, the size of the body too would be infinite.)
+    </td>
+</tr>
+<tr>
+    <td>
+        ἄκρον τε ἔχοντος τοῦ πεπερασμένου διαληπτόν, εἰ μὴ καὶ καθ᾽ ἑαυτὸ θεωρητόν, οὐκ ἔστι μὴ οὐ καὶ τὸ ἑξῆς τούτου τοιοῦτον νοεῖν καὶ οὕτω κατὰ τὸ ἑξῆς εἰς τοὔμπροσθεν βαδίζοντι εἰς τὸ ἄπειρον ὑπάρχειν κατὰ &lt;τὸ&gt; τοιοῦτον ἀφικνεῖσθαι τῇ ἐννοίᾳ. 
+    </td>
+    <td>
+        And again, since the limited body has an extreme point, which is distinguishable, even though not perceptible by itself, you cannot conceive that the succeeding point to it is not similar in character, or that if you go on in this way from one point to another, it should be possible for you to proceed to infinity marking such points in your mind.
+    </td>
+</tr>
+<tr>
+    <td>
+        [58]
+    </td>
+    <td>
+        [58]
+    </td>
+</tr>
 </table>
 </body>
 </html>
