--- a/Letter_to_Herodotus_Bailey_Bilingual.html
+++ b/Letter_to_Herodotus_Bailey_Bilingual.html
@@ -714,10 +714,130 @@ The Greek text is from Epicurea (1887), edited by Hermann Usener. It was created
 </tr>
 <tr>
     <td>
-        [58]
+        [58] τό τε ἐλάχιστον τὸ ἐν τῇ αἰσθήσει δεῖ κατανοεῖν ὅτι οὔτε τοιοῦτόν ἐστιν οἷον τὸ τὰς μεταβάσεις ἔχον οὔτε πάντῃ πάντως ἀνόμοιον, ἀλλ᾽ ἔχον μέν τινα κοινότητα τῶν μεταβατῶν, διάληψιν δὲ μερῶν οὐκ ἔχον·
     </td>
     <td>
-        [58]
+        [58] We must notice also that the least thing in sensation is neither exactly like that which admits of progression from one part to another, nor again is it in every respect wholly unlike it, but it has a certain affinity with such bodies, yet cannot be divided into parts.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἀλλ᾽ ὅταν διὰ τὴν τῆς κοινότητος προσεμφέρειαν οἰηθῶμεν διαλήψεσθαί τι αὐτοῦ, τὸ μὲν ἐπιτάδε, τὸ δὲ ἐπέκεινα, τὸ ἴσον ἡμῖν δεῖ προσπίπτειν. 
+    </td>
+    <td>
+        But when on the analogy of this resemblance we think to divide off parts of it, one on the one side and another on the other, it must needs be that another point like the first meets our view.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἑξῆς τε θεωροῦμεν ταῦτα ἀπὸ τοῦ πρώτου καταρχόμενοι καὶ οὐκ ἐν τῷ αὐτῷ, οὐδὲ μέρεσι μερῶν ἁπτόμενα, ἀλλ᾽ ἢ ἐν τῇ ἰδιότητι τῇ ἑαυτῶν τὰ μεγέθη καταμετροῦντα, τὰ πλείω πλεῖον καὶ τὰ ἐλάττω ἔλαττον. 
+    </td>
+    <td>
+        And we look at these points in succession starting from the first, not within the limits of the same point nor in contact part with part, but yet by means of their own proper characteristics measuring the size of bodies, more in a greater body and fewer in a smaller.
+    </td>
+</tr>
+<tr>
+    <td>
+        ταύτῃ τῇ ἀναλογίᾳ νομιστέον καὶ τὸ ἐν τῇ ἀτόμῳ ἐλάχιστον κεχρῆσθαι.
+    </td>
+    <td>
+        Now we must suppose that the least part in the atom too bears the same relation to the whole;
+    </td>
+</tr>
+<tr>
+    <td>
+        [59] μικρότητι γὰρ ἐκεῖνο δῆλον ὡς διαφέρει τοῦ κατὰ τὴν αἴσθησιν θεωρουμένου, ἀναλογίᾳ δὲ τῇ αὐτῇ κέχρηται.
+    </td>
+    <td>
+        [59] for though in smallness it is obvious that it exceeds that which is seen by sensation, yet it has the same relations.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἐπεί περ καὶ ὅτι μέγεθος ἔχει ἡ ἄτομος, κατὰ τὴν &lt;τῶν&gt; ἐνταῦθα ἀναλογίαν κατηγορήσαμεν, μικρόν τι μόνον μακρὰν ἐκβάλλοντες.
+    </td>
+    <td>
+        For indeed we have already declared on the ground of its relation to sensible bodies that the atom has size, only we placed it far below them in smallness.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἔτι τε τὰ ἐλάχιστα καὶ ἀμιγῆ πέρατα δεῖ νομίζειν τῶν μηκῶν, τὸ καταμέτρημα ἐξ αὑτῶν πρώτων τοῖς μείζοσι καὶ ἐλάττοσι παρασκευάζοντα, τῇ διὰ λόγου θεωρίᾳ ἐπὶ τῶν ἀοράτων. 
+    </td>
+    <td>
+        Further, we must consider these least indivisible points as boundary-marks, providing in themselves as primary units the measure of size for the atoms, both for the smaller and the greater, in our contemplation of these unseen bodies by means of thought.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἣ γὰρ κοινότης ἡ ὑπάρχουσα αὐτοῖς πρὸς τὰ ἀμετάβατα ἱκανὴ τὸ μέχρι τούτου συντελέσαι·
+    </td>
+    <td>
+        For the affinity which the least parts of the atom have to the homogeneous parts (of sensible things) is sufficient to justify our conclusion to this extent,
+    </td>
+</tr>
+<tr>
+    <td>
+        συμφόρησιν δὲ ἐκ τούτων κίνησιν ἐχόντων οὐχ οἷόν τε γενέσθαι.
+    </td>
+    <td>
+        but that they should ever come together as bodies with motion is quite impossible.
+    </td>
+</tr>
+<tr>
+    <td>
+        [60] Καὶ μὴν καὶ τοῦ ἀπείρου ὡς μὲν ἀνωτάτῳ ἢ κατωτάτῳ, οὐ δεῖ κατηγορεῖν τὸ ἄνω ἢ κάτω·
+    </td>
+    <td>
+        [60] [Furthermore, in the infinite we must not speak of 'up' or 'down', as though with reference to an absolute highest or lowest —
+    </td>
+</tr>
+<tr>
+    <td>
+        εἰς μέντοι τὸ ὑπὲρ κεφαλῆς, ὅθεν ἂν στῶμεν, εἰς ἄπειρον ἄγειν &lt;ἐν&gt;ὸν μηδέποτε φανεῖσθαι τοῦτο ἡμῖν· 
+    </td>
+    <td>
+        and indeed we must say that, though it is possible to proceed to infinity in the direction above our heads from wherever we take our stand, the absolute highest point will never appear to us —
+    </td>
+</tr>
+<tr>
+    <td>
+        ἢ τὸ ὑποκάτω τοῦ νοηθέντος εἰς ἄπειρον ἅμα ἄνω τε εἶναι καὶ κάτω πρὸς τὸ αὐτό·
+    </td>
+    <td>
+        nor yet can that which passes beneath the point thought of to infinity be at the same time both up and down in reference to the same thing: 
+    </td>
+</tr>
+<tr>
+    <td>
+        τοῦτο γὰρ ἀδύνατον διανοηθῆναι. 
+    </td>
+    <td>
+        for it is impossible to think this.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὥστε ἔστι μίαν λαβεῖν φορὰν τὴν ἄνω νοουμένην εἰς ἄπειρον καὶ μίαν τὴν κάτω, ἂν καὶ μυριάκις πρὸς τοὺς πόδας τῶν ἐπάνω τὸ παρ᾽ ἡμῶν φερόμενον &lt;ἐς&gt; τοὺς ὑπὲρ κεφαλῆς ἡμῶν τόπους ἀφικνῆται ἢ ἐπὶ τὴν κεφαλὴν τῶν ὑποκάτω τὸ παρ᾽ ἡμῶν κάτω φερόμενον· 
+    </td>
+    <td>
+        So that it is possible to consider as one single motion that which is thought of as the upwards motion to infinity and as another the downward motion, even though that which passes from us into the regions above our heads arrives countless times at the feet of beings above and that which passes downwards from us at the head of beings below; 
+    </td>
+</tr>
+<tr>
+    <td>
+        ἡ γὰρ ὅλη φορὰ οὐθὲν ἧττον ἑκατέρα ἑκατέρᾳ ἀντικειμένη ἐπ᾽ ἄπειρον νοεῖται.
+    </td>
+    <td>
+        for none the less the whole motions are thought of as opposed, the one to the other, to infinity.]
+    </td>
+</tr>
+<tr>
+    <td>
+        [61]
+    </td>
+    <td>
+        [61]
     </td>
 </tr>
 </table>
